--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,30 @@
 <resources>
     <string name="app_name">VK Messenger</string>
-    <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
+
+    <string name="message_action_created_chat">Created chat %s</string>
+    <string name="message_action_invited_user">Invited user %s to chat</string>
+    <string name="message_action_kicked_user">Kicked user %s from chat</string>
+    <string name="message_action_returned_to_chat">%s Returned to chat</string>
+    <string name="message_action_left_from_chat">%s Left from chat</string>
+    <string name="message_action_updated_photo">%s Updated chat photo</string>
+    <string name="message_action_removed_photo">%s Removed chat photo</string>
+    <string name="message_action_updated_title">%s Updated chat title</string>
+    <string name="message_action_pinned_message">%s Pinned message</string>
+    <string name="message_action_unpinned_message">%s Unpinned message</string>
+    <string name="message_action_invited_by_link">%s Invited by link</string>
+
+    <string name="message_fwd_one">Message</string>
+    <string name="message_fwd_many">Messages</string>
+    <string name="message_attachments_many">Attachments</string>
+    <string name="message_attachment_photo">Photo</string>
+    <string name="message_attachment_video">Video</string>
+    <string name="message_attachment_audio">Audio</string>
+    <string name="message_attachment_doc">Document</string>
+    <string name="message_attachment_link">Link</string>
+    <string name="message_attachment_sticker">Sticker</string>
+    <string name="message_attachment_gift">Gift</string>
+    <string name="message_attachment_graffiti">Graffiti</string>
+    <string name="message_attachment_voice">Voice message</string>
+    <string name="message_attachment_poll">Poll</string>
+
 </resources>
