--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">VK Messenger</string>
+    <string name="app_name" translatable="false">Project.VKM</string>
 
     <string name="message_action_created_chat">Created chat %s</string>
     <string name="message_action_invited_user">Invited %s to chat</string>
@@ -27,10 +27,17 @@
     <string name="message_attachment_voice">Voice message</string>
     <string name="message_attachment_poll">Poll</string>
 
+    <string name="fragment_login">Login</string>
+
+    <string name="navigation_search">Search</string>
     <string name="navigation_conversations">Conversations</string>
     <string name="navigation_friends">Friends</string>
+    <string name="navigation_important">Important</string>
     <string name="navigation_settings">Settings</string>
 
     <string name="message_date_yesterday">Yesterday</string>
+    <string name="drawer_name_surname">Name Surname</string>
+    <string name="drawer_status">Status</string>
+    <string name="pref_account_logout_title">Logout</string>
 
 </resources>
