Отображение однотипных вложений в списке чатов
"2 photos"
"3 videos"
"4 documents"
"5 audios"

вместо "attachments"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,11 @@
     <string name="message_attachment_voice">Voice message</string>
     <string name="message_attachment_poll">Poll</string>
 
+    <string name="message_attachment_photos">%d Photos</string>
+    <string name="message_attachment_videos">%d Videos</string>
+    <string name="message_attachment_audios">%d Audios</string>
+    <string name="message_attachment_docs">%d Documents</string>
+
     <string name="fragment_login">Login</string>
 
     <string name="navigation_search">Search</string>
