--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="message_attachment_graffiti">Graffiti</string>
     <string name="message_attachment_voice">Voice message</string>
     <string name="message_attachment_poll">Poll</string>
+    <string name="message_attachment_call">Call</string>
 
     <string name="message_attachment_photos">%d Photos</string>
     <string name="message_attachment_videos">%d Videos</string>
