--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,8 @@
     <string name="prefs_about">About</string>
     <string name="prefs_account">Account</string>
     <string name="chat_message_hint">Type&#8230;</string>
+    <string name="token">Token</string>
+    <string name="custom_data">Custom data</string>
+    <string name="user_id">User Id</string>
 
 </resources>
