Удаление, восстановление, изменение, добавление сообщений в чате

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,5 +101,6 @@
     <string name="yesterday">Yesterday</string>
 
     <string name="refresh">Refresh</string>
+    <string name="edited">Edited</string>
 
 </resources>
